src/styles/_Header.scss
/* Copyright (c) Microsoft Corporation and others. */
/* SPDX-License-Identifier: MIT */

.navbar {
  border-radius: 0px;
  border-width: 0px;
  margin-bottom: 50px;
  min-height: 80px;

  .navbar-brand {
    margin-top: 10px;
    padding: 0px 20px 0px 0px;
    height: 60px;
    align-self: center;
    &:hover {
      cursor: pointer;
    }
  }

  .navbar-nav {
    > li {
      > a {
        font-weight: 600;
        font-size: 1.1em;
        color: $color-text-light;
        padding-top: 30px;
        padding-bottom: 0px;
        &:hover,
        &:focus {
          color: $color_highlight;
        }
      }
    }
    > .active {
      > a {
        color: $color_highlight;
        background-color: transparent;
        &:hover,
        &:focus {
          color: $color_highlight;
          background-color: transparent;
        }
        div {
          padding-bottom: 6px;
          border-bottom-color: $color_highlight;
          border-bottom-style: solid;
          border-bottom-width: 4px;
        }
      }
    }
  }
}

